--- a/acWifiObservability/app/src/main/res/values/strings.xml
+++ b/acWifiObservability/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">acWifiObservability</string>
+    <string name="app_name">Phone Monitoring</string>
 </resources>
